macOS Metal viewport: Blocking artefacts on selected faces #105830

Closed
opened 2023-03-16 14:53:55 +01:00 by William Reynish · 11 comments

System Information
Operating system: macOS-13.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Max Apple 4.1 Metal - 83

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-16 13:14, hash: 8bb411ad1a5e
Worked: N/A

Short description of error
macOS Metal: Blocking artefacts on selected faces

Exact steps for others to reproduce the error

  • Open the attached blend file on latest Trunk on macOS
  • Make sure it's set to use Metal GPU backend
  • Enter Edit Mode and select a face on the head.

Notice the blocking artefacts. These are not present with OpenGL.

**System Information** Operating system: macOS-13.1-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Max Apple 4.1 Metal - 83 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-16 13:14, hash: `8bb411ad1a5e` Worked: N/A **Short description of error** macOS Metal: Blocking artefacts on selected faces **Exact steps for others to reproduce the error** - Open the attached blend file on latest Trunk on macOS - Make sure it's set to use Metal GPU backend - Enter Edit Mode and select a face on the head. Notice the blocking artefacts. These are not present with OpenGL.
William Reynish added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-03-16 14:53:56 +01:00
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2023-03-16 14:58:11 +01:00
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-03-16 14:58:16 +01:00
William Reynish changed title from macOS Metal: Blocking artefacts on selected faces to macOS Metal viewport: Blocking artefacts on selected faces 2023-03-16 15:51:09 +01:00

Can't reproduce on
Operating system: macOS-13.2.1-x86_64-i386-64bit 64 Bits
Graphics card: Metal API AMD Radeon Pro 5700 XT 1.2

Can't reproduce on Operating system: macOS-13.2.1-x86_64-i386-64bit 64 Bits Graphics card: Metal API AMD Radeon Pro 5700 XT 1.2

Yes, this issue could be Apple Silicon only.

Yes, this issue could be Apple Silicon only.

Below is a screen recording of Blender running on Metal on an M1 Max Macbook pro. You should be able to see the blocking artefacts as viewport camera moves.

Below is a screen recording of Blender running on Metal on an M1 Max Macbook pro. You should be able to see the blocking artefacts as viewport camera moves.
Member

Yes this is an issue we are familiar with, has to do with the depth bias and is Blender 3.6 only.

Will confirm for now.

Yes this is an issue we are familiar with, has to do with the depth bias and is Blender 3.6 only. Will confirm for now.
Jeroen Bakker added this to the 3.6 LTS milestone 2023-03-17 15:34:21 +01:00
Jeroen Bakker added this to the EEVEE & Viewport project 2023-03-17 15:34:24 +01:00
Jeroen Bakker added
Interest
Metal
Status
Confirmed
Type
Bug
Platform
macOS
and removed
Status
Needs Triage
Type
Report
labels 2023-03-17 15:35:30 +01:00
Member

@Jeroen-Bakker : when confirming, please make sure to add the Module label (not just add it to the Projec).

@Jeroen-Bakker : when confirming, please make sure to add the `Module` label (not just add it to the Projec).
Philipp Oeser added the
Module
EEVEE & Viewport
label 2023-03-21 08:55:58 +01:00
Member

In #106547, @Kuzey has shown the same issue for unselected faces.

In #106547, @Kuzey has shown the same issue for unselected faces.

Any updates on this? I would love to start downloading the daily builds again

Any updates on this? I would love to start downloading the daily builds again
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-04 12:42:46 +02:00
Blender Bot added
Status
Confirmed
and removed
Status
Resolved
labels 2023-05-05 20:32:10 +02:00

While the issue is slightly reduced now, for me here it's not resolved.

Below you can see a screenshot from master today. The artefacts clear up as I zoom in, but when I zoom further back, they are still present.

While the issue is slightly reduced now, for me here it's not resolved. Below you can see a screenshot from master today. The artefacts clear up as I zoom in, but when I zoom further back, they are still present.
Member

Ok, might be related to the resolution of the monitor. I will check different systems to see if there are better magic numbers.

Ok, might be related to the resolution of the monitor. I will check different systems to see if there are better magic numbers.

FWIWI get these issues both on my 16" Retina MacBook Pro and my 27" 5K. At work we have 6K displays too.

FWIWI get these issues both on my 16" Retina MacBook Pro and my 27" 5K. At work we have 6K displays too.
Jeroen Bakker self-assigned this 2023-05-08 09:46:29 +02:00

Looks like there are two separate issues at play here.

The original issue seemed to be in relation to retopology overlay, which I believe is fixed by Jeroen's patch.
The second issue is reproducible on any display I have tried, which is the blocking artifacts on certain planes with the edit overlay, though it only tends to happen when being more zoomed out, or on a higher pixel density display.

I will look into a fix for this.

Looks like there are two separate issues at play here. The original issue seemed to be in relation to retopology overlay, which I believe is fixed by Jeroen's patch. The second issue is reproducible on any display I have tried, which is the blocking artifacts on certain planes with the edit overlay, though it only tends to happen when being more zoomed out, or on a higher pixel density display. I will look into a fix for this.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-19 09:23:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105830
No description provided.